@@ -3,7 +3,8 @@
 
  - Fix "No input files given" bug in `solcx.compile_source()` on v0.5.x
  - `install.py` - replace `os.path` with `pathlib.Path`
- - Linux/OSX - copy from `which solc` path to save time installing solc
+ - Linux - copy from `which solc` path to save time installing solc
+ - OSX - copy solc versions from `usr/local/Cellar`, raise when attempting v0.4.x install
 
 0.1.1
 -----
